--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "sqlite",
     "sync"
   ],
-  "author": "",
+  "author": "Michael Sageryd",
   "license": "MIT",
   "devDependencies": {
     "builtin-modules": "^3.3.0",
