--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "builtin-modules": "^3.3.0",
     "esbuild": "^0.17.19"
+  },
+  "dependencies": {
+    "stopword": "^3.0.1"
   }
 }
